# vim: set noexpandtab:

2013-02-09 Steve
	* Updated to SUSYTools-00-02-05 (no change here)
	* Added detEta to Jet
	* Tagging SusyCommon-00-00-59

2013-02-05 Steve
	* Updated to SUSYTools-00-02-04
	* Updated GetSignalMuonSF usage to get the errEffSF
	* Now saving corrected tau ele BDT flags, using SUSYObjDef.GetCorrectedEleBDTFlag
	* Removed nEntries==0 abort in NtMaker
	* Tagging SusyCommon-00-00-58

2013-01-27 Steve
	* Fixed path for electron med SF file
		* I was using $TestArea instead of $ROOTCOREDIR, which isn't setup the same way on the grid
	* Tagging SusyCommon-00-00-57

2013-01-27 Steve
	* Added errXsec to SusyD3PDAna, saved in SusyNt with NtMaker --errXsec X
	* Tagging SusyCommon-00-00-56

2013-01-26 Steve
	* Added support for Default susy MET
	* Tagging SusyCommon-00-00-55

2013-01-23 Steve
	* Updated code for SUSYTools-00-02-03
	* Update default pileup to full 2012 dataset
	* Added pileup weight for A-E (HCP dataset)
	* Added TElectronEfficiencyCorrectionTool for medium electron SFs.
	  From SUSYTools we can only easily get SFs for tight electrons

2013-01-23 Serhan Mete <amete@cern.ch>
	* Added truth leptons (both light and taus)

2013-01-22 Serhan Mete <amete@cern.ch>
	* Implementing the newly added truth variables.
	* Still work in progress...
	* Files affected are:
	* M       Root/SusyD3PDAna.cxx
	* M       Root/SusyNtMaker.cxx
	* M       SusyCommon/SusyD3PDAna.h
	* M       SusyCommon/SusyNtMaker.h
	* M       util/NtMaker.cxx

2013-01-21 Steve
	* Added EF_2mu8_EFxe40wMu_tclcw trigger check
		* Only used in data with run>=206248 (Period C and onwards)
	* Tagging SusyCommon-00-00-54

2013-01-20 Steve
	* Tagging SusyCommon-00-00-53

2013-01-18 Matt
	* Bug fix for saving jet pt's when systematics are turned on. Wasn't recalibrating Pt

2013-01-17 Steve
	* Adding grl command line option to NtMaker
	* Updated default grl to Moriond version
	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15